# vrewm

./: Cargo.toml  LICENSE  rust_out  test_fs  test_handlers  test_scale  test_scale2  test_sig.long-type-2037612554689524862.txt  test_win  treewm_log.txt
src/: drm.rs  input.rs  ipc.rs  main.rs  renderering.rs  state.rs  winit.rs
src/grabs/: mod.rs  move_grab.rs  pan_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  config.rs  cursor_shape.rs  layer_shell.rs  mod.rs  tablet.rs  xdg_shell.rs
