[package]
name = "treewm"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
branch = "master"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
