[package]
name = "treewm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
branch = "master"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
