[package]
name = "treewm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xcursor = "0.3.10"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
branch = "master"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "use_system_lib",
]
